force-app/main/default/objects/CanalVendas__c/CanalVendas__c.object-meta.xml
<CustomObject>
    <label>Canal de Vendas</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canais de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>