force-app/main/default/objects/CanalVendas__c/fields/CodigoCanalVendas__c.field-meta.xml
<CustomField>
    <fullName>CodigoCanalVendas__c</fullName>
    <externalId>true</externalId>
    <label>Código Canal de Vendas</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>