force-app/main/default/objects/CanalVendas__c/fields/Nivel01__c.field-meta.xml
<CustomField>
    <fullName>Nivel01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nível 01</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Canais de Vendas</relationshipLabel>
    <relationshipName>CanaisVendas01</relationshipName>
    <type>Lookup</type>
</CustomField>