force-app/main/default/objects/CanalVendas__c/fields/Nivel02__c.field-meta.xml
<CustomField>
    <fullName>Nivel02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nível 02</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Canais de Vendas (Nível 02)</relationshipLabel>
    <relationshipName>CanaisVendas02</relationshipName>
    <type>Lookup</type>
</CustomField>