force-app/main/default/objects/CanalVendas__c/fields/Nivel03__c.field-meta.xml
<CustomField>
    <fullName>Nivel03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nível 03</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Canais de Vendas (Nível 03)</relationshipLabel>
    <relationshipName>CanaisVendas03</relationshipName>
    <type>Lookup</type>
</CustomField>